---
source: crates/validation/tests/scenario_tests.rs
expression: errors
---
[
    Error {
        scope: test://example/int-string-captures#/captures/testing~1db-cdc/endpoint/connector/image,
        error: error while extracting metadata from the connector image 'database': failed to parse `docker inspect` output: [{"whoops": "bad"}]: missing field `Config` at line 1 column 18,
    },
    Error {
        scope: test://example/int-string-captures#/captures/testing~1s3-source/endpoint/connector/image,
        error: error while extracting metadata from the connector image 's3': failed to parse `docker inspect` output: [{"Invalid": "Inspection"}]: missing field `Config` at line 1 column 26,
    },
    Error {
        scope: test://example/db-views#/materializations/testing~1db-views/endpoint/connector/image,
        error: error while extracting metadata from the connector image 'database/image': failed to parse `docker inspect` output: {"also": "bad"}: invalid type: map, expected a sequence at line 1 column 0,
    },
    Error {
        scope: test://example/webhook-deliveries#/materializations/testing~1webhook~1deliveries/endpoint/connector/image,
        error: error while extracting metadata from the connector image 'webhook/connector': failed to parse `docker inspect` output: {"me": "too"}: invalid type: map, expected a sequence at line 1 column 0,
    },
]
